--- a/index.html
+++ b/index.html
@@ -5,10 +5,92 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>ALIAKSEI`s curriculum vitae</title>
+   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
+   <div class="parentCenter">
+      <div class="blockCenter containerForMobile backgroundHeaderColor">
+         <header>
+            <h1 align="center" class="headerText">
+               <img src="https://i.ibb.co/z2p7XvW/fly01m.jpg" alt="TAUKACHOU ALIAKSEI" class="imgStyle">
+               TAUKACHOU ALIAKSEI
+            </h1>
+         </header>
+         <div class="backgroundMainColor">
+            <main>
+               <pre>
+
+
+
+               </pre>
+               <hr>
+               <section itemscope itemtype="http://schema.org/Person">
+                  <p class="topicText">E-MAIL:</p>
+                  <p class="basicText"><span itemprop="email">oleksiy_t@tut.by</span></p>
+               </section>
+               <hr>
+               <p class="topicText">OBJECTIVE:</p>
+               <p class="basicText">JS/Frontend-developer</p>
+               <hr>
+               <p class="topicText">ABOUT:</p>
+               <p class="basicText">I am currently taking courses <b><i>JS/Frontend-developer</i></b> from <i>RS
+                     School</i>.
+                  I plan to become a <b><i>JS/Frontend-developer</i></b> in a year. I am very serious about becoming a
+                  programmer,
+                  so every day I develop code and study the possibilities of the JS.</p>
+               <hr>
+               <p class="topicText">TECHNICAL SKILLS:</p>
+               <p class="basicText">In the process of studying the following IT-products and technologies:</p>
+               <ul class="basicText">
+                  <li>JS</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>GitHub</li>
+                  <li>Visual Studio Code</li>
+                  <li>Git Bash</li>
+               </ul>
+               <hr>
+               <p class="topicText">SAMPLE JS CODE:</p>
+               <pre>
+                  <code>
+  
+   function sumInput() {
+
+      let summ = 0;
+
+   let count = [];
+
+   let lich = 0;
+
+   do {
+
+      count.push(lich);
+
+   summ = summ + count[count.length - 1];
+
+   lich = +prompt(`Введіть чісло для підсумку! Або "0" коли закінчили.`, '');
+
+   }
+
+   while ( isFinite(lich) && lich != null && lich != "");
+
+   return(summ);
+
+   }
+
+   alert( sumInput() );
+
+   
+                </code><
+                   /pre>
+               <hr>
+            </main>
+         </div>
+
+      </div>
+   </div>
 
 </body>
 
