feat: last modification  style.css & index.html

--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-
+
+scale=1.0">
    <title>ALIAKSEI`s curriculum vitae</title>
    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-   <div class="parentCenter">
-      <div class="blockCenter containerForMobile backgroundHeaderColor">
-         <header>
-            <h1 align="center" class="headerText">
-               <img src="https://i.ibb.co/z2p7XvW/fly01m.jpg" alt="TAUKACHOU ALIAKSEI" class="imgStyle">
+   <div class="horizonCenter containerForMobile 
+
+backgroundHeaderColor">
+        <header>    
+          <figure>
+            <img src="https://i.ibb.co/z2p7XvW/fly01m.jpg" 
+
+alt="TAUKACHOU ALIAKSEI" class="imgStyle">
+          </figure>
+            <h1 class="alignСenter headerText">        
                TAUKACHOU ALIAKSEI
             </h1>
-         </header>
-         <div class="backgroundMainColor">
-            <main>
+        </header>
+      <div class="backgroundMainColor">
+        <main>
                <pre>
 
 
@@ -30,23 +37,41 @@
 
                </pre>
                <hr>
-               <section itemscope itemtype="http://schema.org/Person">
-                  <p class="topicText">E-MAIL:</p>
-                  <p class="basicText"><span itemprop="email">oleksiy_t@tut.by</span></p>
-               </section>
+            <section itemscope itemtype="http://schema.org/Person">
+                  <h2 class="topicText">CONTACT</h2>
+               <ul class="basicText">
+                  <li><b><i>E-MAIL:</i></b> <span 
+
+itemprop="email"><i>oleksiy_t@tut.by</i></span></li>
+                  <li><b><i>DISCORD:</i></b> <i>oleksiy-tov</i></li>
+               </ul>
+            </section>
                <hr>
-               <p class="topicText">OBJECTIVE:</p>
+            <section>
+               <h2 class="topicText">OBJECTIVE</h2>
                <p class="basicText">JS/Frontend-developer</p>
+            </section>
                <hr>
-               <p class="topicText">ABOUT:</p>
-               <p class="basicText">I am currently taking courses <b><i>JS/Frontend-developer</i></b> from <i>RS
+            <section>
+               <h2 class="topicText">ABOUT</h2>
+               <p class="basicText">I am currently taking courses 
+
+<b><i>JS/Frontend-developer</i></b> from <i>RS
                      School</i>.
-                  I plan to become a <b><i>JS/Frontend-developer</i></b> in a year. I am very serious about becoming a
+                  I plan to become a <b><i>JS/Frontend-
+
+developer</i></b> in a year. I am very serious about becoming a
                   programmer,
-                  so every day I develop code and study the possibilities of the JS.</p>
+                  so every day I develop code and study the 
+
+possibilities of the JS.</p>
+            </section>
                <hr>
-               <p class="topicText">TECHNICAL SKILLS:</p>
-               <p class="basicText">In the process of studying the following IT-products and technologies:</p>
+            <section>
+               <h2 class="topicText">TECHNICAL SKILLS</h2>
+               <p class="basicText">In the process of studying the 
+
+following IT-products and technologies:</p>
                <ul class="basicText">
                   <li>JS</li>
                   <li>HTML</li>
@@ -55,10 +80,12 @@
                   <li>Visual Studio Code</li>
                   <li>Git Bash</li>
                </ul>
+            </section>
                <hr>
-               <p class="topicText">SAMPLE JS CODE:</p>
+            <section>
+               <h2 class="topicText">SAMPLE JS CODE</h2>
                <pre class="codeText">
-                  <code> 
+                  <code>
    function sumInput() {
       let summ = 0;
       let count = [];
@@ -66,53 +93,107 @@
       do {
         count.push(lich);
         summ = summ + count[count.length - 1];
-        lich = +prompt(`Введіть чісло для підсумку! Або "0" коли закінчили.`, '');
+        lich = +prompt(`Enter the number for the result! Or "0" when 
+
+you're done.`, '');
           }
       while ( isFinite(lich) && lich != null && lich != "");
       return(summ);
    }
-   alert( sumInput() ); 
+   alert( sumInput() );
                   </code>
                 </pre>
+            </section>
                <hr>
-               <p class="topicText">WORK EXPERIENCE:</p>
-               <p class="basicText">I have no experience of independent work, but I gained some experience solving
-                  examples from the <b><i>JavaScript tutorial</i></b>.
-                  Also, now I am gaining experience in the process of completing assignments in the courses
-                  <b><i>JS/Frontend-developer</i></b> from <i>RS School</i>.
+            <section>
+               <h2 class="topicText">WORK EXPERIENCE</h2>
+               <p class="basicText">I have no experience of 
+
+independent work, but I gained some experience solving
+                  examples from the <b><i>JavaScript 
+
+tutorial</i></b>.
+                  Also, now I am gaining experience in the process of 
+
+completing assignments in the courses
+                  <b><i>JS/Frontend-developer</i></b> from <i>RS 
+
+School</i>.
                </p>
-               <p class="basicText">At the moment, I know a little how to perform:</p>
+               <p class="basicText">At the moment, I know a little 
+
+how to perform:</p>
                <ul class="basicText">
                   <li>Tasks review and estimations</li>
                   <li>Projects and features development</li>
                   <li>Code review skills</li>
                </ul>
+            </section>
                <hr>
-               <p class="topicText">EDUCATION:</p>
-               <p class="basicText">I independently studied the JavaScript tutorial located at <a
-                     href="https://learn.javascript.ru/" target="_blank">https://learn.javascript.ru/</a>
-                  And now I'm taking courses JS/Frontend-developer from RS School <a href="https://rs.school/js-stage0/"
-                     target="_blank">https://rs.school/js-stage0/</a></p>
+            <section>
+               <h2 class="topicText">EDUCATION</h2>
+               <p class="basicText">I independently studied the 
+
+JavaScript tutorial located at <a
+                     href="https://learn.javascript.ru/" 
+
+target="_blank">https://learn.javascript.ru/</a>
+                  And now I'm taking courses JS/Frontend-developer 
+
+from RS School <a href="https://rs.school/js-stage0/"
+                     target="_blank">https://rs.school/js-
+
+stage0/</a></p>
+            </section>
                <hr>
-               <p class="topicText">LANGUAGES:</p>
+            <section>
+               <h2 class="topicText">LANGUAGES</h2>
                <ul class="basicText">
-                  <li><b><i>English</i></b> – Pre-Intermediate (but it will be better soon as I am currently studying on
+                  <li><b><i>English</i></b> - Pre-Intermediate (but 
+
+it will be better soon as I am currently studying on
                      courses)</li>
-                  <li><b><i>Ukrainian</i></b> – Native Speaker</li>
-                  <li><b><i>Belarussian</i></b> – Native Speaker</li>
-                  <li><b><i>Russian</i></b> – Native Speaker</li>
+                  <li><b><i>Ukrainian</i></b> - Native Speaker</li>
+                  <li><b><i>Belarussian</i></b> - Native Speaker</li>
+                  <li><b><i>Russian</i></b> - Native Speaker</li>
                </ul>
+            </section>
                <hr>
-               <p class="topicText">SEVERAL FACTS ABOUT ME:</p>
-               <p class="basicText">My hobbies are travel, hiking, kayaking, cycling and aviation. I do not smoke,
-                  drink alcohol and only eat vegetarian food.</p>
-               <hr>
-            </main>
-         </div>
+            <section>
+               <h2 class="topicText">SEVERAL FACTS ABOUT ME</h2>
+               <p class="basicText">My hobbies are travel, hiking, 
 
-      </div>
+kayaking, cycling and aviation. I don't smoke,
+                  don't drink alcohol and only eat vegetarian 
+
+food.</p>
+            </section>
+               <hr>
+            <footer>
+               <div class="backgroundHeaderColor">
+                  <table>
+                     <tr> 
+                        <td> <a href="https://github.com/oleksiy-tov" 
+
+target="_blank" class="topicText"><i>My GitHub</i></a>
+                        <p 
+
+class="basicText"><b><i>2021</i></b></p></td>
+                        <td id="cell2"><p><a 
+
+href="https://rs.school/js/" target="_blank">
+                               <img 
+
+src="https://rs.school/images/rs_school_js.svg" alt="RS School" 
+
+height="50"></a></p></td>
+                     </tr>
+                  </table>
+               </div>  
+            </footer>
+        </main>
+      </div>   
    </div>
-
 </body>
 
 </html>
